--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-https://imgur.com/a/m93g4bH
+<blockquote class="imgur-embed-pub" lang="en" data-id="a/m93g4bH"  ><a href="//imgur.com/a/m93g4bH"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 <iframe src="https://s60.radiolize.com/public/apt.fm_vueabs/embed?theme=light" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 160px; border: 0;"></iframe>
