--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<blockquote class="imgur-embed-pub" lang="en" data-id="a/m93g4bH"  ><a href="//imgur.com/a/m93g4bH"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<img src="https://tinypic.host/images/2025/05/15/plane-globe2.gif" alt="plane globe(2)" border="0">
 
 <iframe src="https://s60.radiolize.com/public/apt.fm_vueabs/embed?theme=light" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 160px; border: 0;"></iframe>
