--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Radio Widget</title>
   <style>
     body {
-      background-color: #000;
-      color: #fff;
+      background-color: #fff; /* White background */
+      color: #000; /* Dark text for contrast */
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
@@ -21,7 +21,7 @@
 
     .radio-container {
       width: 100%;
-      max-width: 600px; /* controls the iframe width */
+      max-width: 600px; /* Controls iframe width */
       margin-top: 20px;
     }
 
